changed pom in data to cover jacoco and added simple test